[package]
name = "loader-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30.0"
egui_extras = { version = "*", features = ["all_loaders","image"] }
egui_alignments = "0.3.1"
rfd = "0.15.2"
anyhow = "1.0.95"
network-interface = "2.0.0"
calcmhz = "0.1.10"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"